--- a/client/style.scss
+++ b/client/style.scss
@@ -3,6 +3,8 @@ html {
     --secondaryBackgroundColor: rgb(20, 20, 20);
     --primaryTextColor: black;
     --secondaryTextColor: white;
+
+    //transform: scale(0.9);
 }
 
 * {
@@ -31,6 +33,11 @@ body {
 /******************************************
     ************** WELCOME **************
 *******************************************/
+
+.ParticlesApp {
+    transition: margin-top 2s ease-in-out;
+    //margin-top: 230px;
+}
 
 .headerWelcome {
     -background: rgba(51, 51, 51, 0.384);
@@ -342,8 +349,8 @@ h2 {
     -background-color: rgba(7, 7, 7, 0.5);
     backdrop-filter: blur(4px);
     width: 100%;
-    height: 400px;
-    //height: 35vh;
+    //height: 400px;
+    height: 40vh;
     padding: 55px 25px 210px 25px;
     //padding-bottom: 200px;
     display: flex;
@@ -416,9 +423,9 @@ button {
     width: 100%;
     //height: 350px;
     //padding: 55px 25px 35px 25px;
-    height: 400px;
-    //height: 35vh;
-    padding: 55px 25px 210px 25px;
+    //height: 400px;
+    height: 30vh;
+    padding: 55px 25px 26vh 25px;
     //padding-bottom: 200px;
     display: flex;
     flex-direction: column;
@@ -613,19 +620,20 @@ button {
     left: 0;
     -background-color: red;
     width: 100vw;
-    height: 180px;
+    height: 160px;
+    transition: height 0.5s ease-in-out;
+    //height: 100%;
     -z-index: 0;
     backdrop-filter: blur(3px);
 }
 
-/* PARTICLES.JS - START - */
 #particles-js {
     position: absolute;
-    height: 150px;
+    //height: 150px;
+    //height: 100vh;
 
     //border: 3px solid lime;
 }
-/* PARTICLES.JS - END - */
 
 .theDeveloperNetworkLogo {
     -width: 100px;
@@ -1172,7 +1180,7 @@ button {
 }
 
 #bioEditorIsVisible p {
-    font-size: 1.25em;
+    font-size: 1.1em;
 }
 
 #bioeditorTextarea {
@@ -1319,6 +1327,7 @@ button {
     align-items: center;
     margin-top: 55px;
     font-family: Dejavu Sans, monospace;
+    z-index: 1;
 }
 
 .friendsGlassOverlay {
@@ -1907,7 +1916,7 @@ li.L9 {
     width: 70vw;
     -width: 750px;
     overflow-x: hidden;
-    background-color: #000000df;
+    background-color: rgb(29, 29, 29);
     -z-index: 1;
     -position: absolute;
     -border: 4px solid white;
@@ -2426,6 +2435,11 @@ html.darkMode {
         background: var(--secondaryBackgroundColor);
     }
 
+    .ParticlesApp {
+        margin-top: 226px;
+        transition: margin-top 2s ease-in-out;
+    }
+
     .headerApp {
         border-bottom: 6px solid white;
         margin-bottom: 2px;
@@ -2433,6 +2447,8 @@ html.darkMode {
 
     .headerAppGlass {
         backdrop-filter: blur(3.5px);
+        height: 100%;
+        transition: height 0.5s ease-in-out;
     }
 
     #darkModeContainer {
