--- a/client/style.scss
+++ b/client/style.scss
@@ -14,7 +14,7 @@ html {
 }
 
 body {
-    -background-color: ghostwhite;
+    //background-color: ghostwhite;
     background-color: black;
     overflow-x: hidden;
 }
@@ -22,8 +22,8 @@ body {
 .parentContainer {
     position: relative;
     min-height: 100vh;
-    -background-color: black;
-    -background-color: ghostwhite;
+    //background-color: black;
+    //background-color: ghostwhite;
 }
 
 .childrenContainer {
@@ -69,7 +69,7 @@ body {
     -width: 1350px;
     margin-top: 20px;
     -height: 35px;
-    -background-color: red;
+    //background-color: red;
     font-family: Dejavu Sans, monospace;
     overflow: hidden;
     border-right: 0.85em solid lime;
@@ -186,16 +186,16 @@ h2 {
     font-family: Dejavu Sans, monospace;
     color: white;
     -font-weight: bold;
-    -text-transform: uppercase;
+    //text-transform: uppercase;
     display: flex;
     align-items: center;
     justify-content: center;
     margin-bottom: 80px;
 }
 .slider {
-    -background-color: rgb(18, 18, 18);
-    -background-color: lime;
-    -margin-left: 0;
+    //background-color: rgb(18, 18, 18);
+    //background-color: lime;
+    //margin-left: 0;
     -height: 500px;
     width: 100%;
     padding-left: 15px;
@@ -303,7 +303,7 @@ h2 {
     overflow-y: hidden;
     position: absolute;
     -z-index: -1;
-    -background-color: red;
+    //background-color: red;
 }
 
 .matrixCode {
@@ -314,7 +314,7 @@ h2 {
     animation: 15s fadeIn;
     animation-fill-mode: forwards; */
     -animation-delay: 5s;
-    -background-color: black;
+    //background-color: black;
     -transition-delay: 3s;
     -transition: opacity 3s linear, visibility 3s linear;
 }
@@ -346,7 +346,7 @@ h2 {
 }
 
 .sectionRegistration {
-    -background-color: rgba(7, 7, 7, 0.5);
+    //background-color: rgba(7, 7, 7, 0.5);
     backdrop-filter: blur(4px);
     width: 100%;
     //height: 400px;
@@ -383,7 +383,7 @@ button {
     font-family: Dejavu Sans, monospace;
     color: white;
     -background-color: rgba(0, 0, 0, 0.288);
-    -backdrop-filter: blur(5px);
+    //backdrop-filter: blur(5px);
     text-decoration: none;
     -outline: lime;
 }
@@ -411,7 +411,7 @@ button {
     display: flex;
     justify-content: center;
     align-items: center;
-    -background-color: red;
+    //background-color: red;
 }
 
 .sectionR-L-RP {
@@ -431,7 +431,7 @@ button {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    -border-bottom: 1px solid rgb(53, 53, 53);
+    //border-bottom: 1px solid rgb(53, 53, 53);
 }
 
 .sectionR-L-RP > h1,
@@ -548,13 +548,13 @@ button {
 
 #enterEmail {
     padding: 0 50px 20px 50px;
-    -background-color: red;
+    //background-color: red;
     text-align: center;
 }
 
 #enterPsw {
     padding: 20px 50px 20px 50px;
-    -background-color: red;
+    //background-color: red;
     text-align: center;
 }
 
@@ -603,13 +603,13 @@ button {
     display: flex;
     justify-content: space-between;
     height: 150px;
-    -border-bottom: 1px solid rgb(53, 53, 53);
+    //border-bottom: 1px solid rgb(53, 53, 53);
     -border: 5px solid rgba(255, 255, 255, 0.459);
     border: 8px solid white;
-    -border-bottom: hidden;
+    //border-bottom: hidden;
     -border-radius: 5px;
     background-color: rgb(29, 29, 29);
-    -backdrop-filter: blur(5px);
+    //backdrop-filter: blur(5px);
     border-radius: 13px;
     -z-index: 0;
 }
@@ -618,7 +618,7 @@ button {
     position: absolute;
     top: 0;
     left: 0;
-    -background-color: red;
+    //background-color: red;
     width: 100vw;
     height: 160px;
     transition: height 0.5s ease-in-out;
@@ -682,8 +682,8 @@ button {
 
 /* ----nav---- */
 .navApp {
-    -background-color: rgba(26, 255, 0, 0.425);
-    -background-color: white;
+    //background-color: rgba(26, 255, 0, 0.425);
+    //background-color: white;
     z-index: 1;
     display: flex;
     justify-content: space-evenly;
@@ -1006,7 +1006,7 @@ button {
 
 .navApp > p:hover {
     text-decoration: underline;
-    -background-color: rgba(255, 0, 0, 0.288);
+    //background-color: rgba(255, 0, 0, 0.288);
 }
 
 /* .whiteStructureContainer {
@@ -1035,7 +1035,7 @@ button {
 .sectionProfile {
     display: flex;
     justify-content: center;
-    -background-color: red;
+    //background-color: red;
 }
 .profileContainer {
     display: flex;
@@ -1044,7 +1044,7 @@ button {
     justify-content: space-evenly;
     margin: 20px;
     min-height: 600px;
-    -min-height: 8000px;
+    //min-height: 8000px;
     max-width: 900px;
     align-content: center;
 }
@@ -1062,7 +1062,7 @@ button {
 }
 
 #welcomeBack {
-    -margin-right: 80px;
+    //margin-right: 80px;
     margin-top: 30px;
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 5px 5px rgba(0, 0, 0, 0.22);
     z-index: 1;
@@ -1106,9 +1106,9 @@ button {
     width: 700px;
     -height: 700px;
     -max-width: 750px;
-    -min-height: 300px;
+    //min-height: 300px;
     -min-width: 100%;
-    -max-height: 80%;
+    //max-height: 80%;
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
@@ -1116,14 +1116,14 @@ button {
     text-align: center;
     -width: 250px;
     -height: 200px;
-    -background-color: rgba(242, 255, 0, 0.288);
+    //background-color: rgba(242, 255, 0, 0.288);
 }
 
 .profile_picBigContainer img {
     margin-left: 1%;
     height: auto;
     width: 700px;
-    -margin-left: 15px;
+    //margin-left: 15px;
     -object-fit: scale-down;
     -object-fit: contain;
     border-radius: 5px;
@@ -1176,7 +1176,7 @@ button {
 .bioEditor {
     background-color: #000000c9;
     padding: 10px 20px 20px 20px;
-    -background-color: rgba(252, 118, 0, 0.253);
+    //background-color: rgba(252, 118, 0, 0.253);
 }
 
 #bioEditorIsVisible p {
@@ -1192,7 +1192,7 @@ button {
 }
 
 #bioeditBtn {
-    -margin-left: 45%;
+    //margin-left: 45%;
     font-size: 1.2em;
     margin: 20px 45% 20px 45%;
     outline: none;
@@ -1260,7 +1260,7 @@ button {
     display: flex;
     flex-direction: column;
     align-items: center;
-    -background-color: hotpink;
+    //background-color: hotpink;
 }
 
 .friendButtonOtherProfWrap button {
@@ -1290,7 +1290,7 @@ button {
     display: flex;
     justify-content: center;
     -align-items: center;
-    -background-color: red;
+    //background-color: red;
     -width: 1000px;
     -height: 1000px;
     margin-left: 25%;
@@ -1306,7 +1306,7 @@ button {
 .friendButton {
     -align-self: center;
     width: 180px;
-    -margin-top: 10px;
+    //margin-top: 10px;
     color: red;
     padding-top: 5px;
     padding-bottom: 5px;
@@ -1359,7 +1359,7 @@ button {
 
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    -column-gap: 10px;
+    //column-gap: 10px;
     justify-items: center;
     align-items: center;
     align-content: center;
@@ -1399,13 +1399,13 @@ button {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between; */
-    -padding-bottom: 5%;
-    -background-color: rgba(0, 0, 0, 0.788);
+    //padding-bottom: 5%;
+    //background-color: rgba(0, 0, 0, 0.788);
     background-color: rgba(0, 0, 0, 0.486);
 
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    -column-gap: 10px;
+    //column-gap: 10px;
     justify-items: center;
     align-items: center;
     align-content: center;
@@ -1480,7 +1480,7 @@ button {
 }
 
 .searchInputWrapper {
-    -padding-bottom: 5%;
+    //padding-bottom: 5%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -1543,7 +1543,7 @@ button {
     margin: 20px;
     border-radius: 5px;
     max-width: 802px;
-    -min-width: 700px;
+    //min-width: 700px;
     /* margin-left: 20%;
     margin-right: 20%; */
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
@@ -1557,6 +1557,17 @@ button {
     background-color: #000000df;
     -z-index: 1;
     -position: absolute;
+    //padding-top: 50px;
+}
+
+#generalChatPaddingTop {
+    padding-top: 170px;
+    background-color: rgba(0, 0, 0, 0.856);
+}
+
+#privateChatPaddingTop {
+    padding-top: 60px;
+    background-color: rgba(0, 0, 0, 0.856);
 }
 
 .chatTextareaContainer {
@@ -1568,22 +1579,48 @@ button {
     border: 3px solid lime;
 }
 
-/* .imgNameWrap{
-    display: flex;
+.imgNameWrap {
+    //display: flex;
+    //border: 3px solid lime;
 }
 
-.imgNameWrap p {
+/* .imgNameWrap p {
     align-self: center;
     margin-left: 5%;
 } */
 
 .imgNameWrap img {
     margin-left: 2%;
+    //border: 3px solid lime;
+    box-shadow: 0 0 20px rgba(255, 255, 255, 0.402),
+            0 0 5px rgba(255, 255, 255, 0.521);
+    //box-shadow: 0 0 100px rgb(0, 0, 0), 0 0 75px rgb(0, 0, 0);
 }
 
-/* .messageDateTimeDeleteBtnWrap {
-    padding-bottom: 20px;
-} */
+.messageDateTimeDeleteBtnWrap {
+    //padding-bottom: 20px;
+    //border: 2px solid lime;
+    background: var(--secondaryBackgroundColor);
+    padding: 5px;
+    display: inline-block;
+    align-items: center;
+    width: 98.3%;
+    //justify-content: space-around;
+    border-radius: 5px;
+    box-shadow: 0 0 20px rgba(255, 255, 255, 0.244),
+            0 0 5px rgba(255, 255, 255, 0.521);
+    //box-shadow: 0 0 100px rgb(0, 0, 0), 0 0 75px rgb(0, 0, 0);
+}
+
+.messageDateTimeDeleteBtnWrapPM {
+    background: var(--secondaryBackgroundColor);
+    padding: 5px;
+    display: inline-block;
+    align-items: center;
+    width: 98.3%;
+    border-radius: 5px;
+    box-shadow: 0 0 100px rgb(0, 0, 0), 0 0 75px rgb(0, 0, 0);
+}
 
 #messageName {
     font-size: 1.2em;
@@ -1594,7 +1631,7 @@ button {
 }
 
 #chat-messages pre {
-    -font-size: 1.15em;
+    //font-size: 1.15em;
     -color: lime;
     -font-family: Dejavu Sans, monospace;
     border: 2px solid rgba(255, 255, 255, 0.169);
@@ -1714,16 +1751,19 @@ li.L9 {
 }
 
 .deleteMessageBtn {
-    font-size: 1.2em;
-    margin-left: 180px;
+    font-size: 1.4em;
+    //margin-left: 200px;
+    //margin-left: 35%;
+    margin-right: 20px;
     border-radius: 50%;
-    padding: 5px;
+    //padding: 5px;
     outline: none;
-
     color: lime;
+    //border: 2px solid yellow;
     -padding: 6.5px 10px;
     -border-radius: 5px;
-    -font-size: 1.4em;
+    //font-size: 1.4em;
+    float: right;
 }
 
 .deleteMessageBtn:hover {
@@ -1745,7 +1785,7 @@ li.L9 {
 #chatbuttonWrap {
     text-align: center;
     background-color: #000000df;
-    -margin-right: 18px;
+    //margin-right: 18px;
     -border-radius: 5px;
     border-bottom-right-radius: 4px;
     border-bottom-left-radius: 4px;
@@ -1754,7 +1794,7 @@ li.L9 {
 
 #chatbuttonWrap button {
     font-size: 1em;
-    -margin-top: 3px;
+    //margin-top: 3px;
     margin-bottom: 5px;
     -border: 1px solid whitesmoke;
     box-shadow: 0 14px 28px rgba(255, 255, 255, 0.226),
@@ -1790,7 +1830,7 @@ li.L9 {
     border-radius: 4px;
     padding: 10px;
     -box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 5px 5px rgba(0, 0, 0, 0.22);
-    -background-color: rgba(0, 0, 0, 0.909);
+    //background-color: rgba(0, 0, 0, 0.909);
     backdrop-filter: blur(5px);
     -opacity: 0.5;
 }
@@ -1827,6 +1867,15 @@ li.L9 {
     }
 }
 
+.onlineUserNameWrap {
+    //border-bottom: 0.5px solid rgba(0, 255, 0, 0.534);
+    padding: 1px;
+    border-radius: 5px;
+    text-decoration: underline;
+    text-decoration-color: black;
+    //animation: border-pulsate 2.45s infinite;
+}
+
 /* ----section(DirectMessages)---- */
 
 #directMessages {
@@ -1842,12 +1891,12 @@ li.L9 {
     position: absolute;
 } */
 
-.wallOuterContainer {
-    -background-color: red;
-}
+/* .wallOuterContainer {
+    background-color: red;
+} */
 
 .wallWrapper {
-    -margin-top: 500px;
+    //margin-top: 500px;
     display: flex;
     justify-content: center;
     -height: auto;
@@ -1860,7 +1909,7 @@ li.L9 {
     justify-content: space-between;
     height: 100px;
     align-items: center;
-    -background-color: lime;
+    //background-color: lime;
 }
 
 .cardWallWrapper {
@@ -1928,7 +1977,7 @@ li.L9 {
     -border: 4px solid white;
     -border: 4px solid lime;
     margin-bottom: 5%;
-    -margin-top: 1%;
+    //margin-top: 1%;
     border-radius: 5px;
 }
 
@@ -1966,7 +2015,7 @@ li.L9 {
     border-radius: 4px;
     padding: 10px;
     box-shadow: 0 0 10px white, 0 0 5px white;
-    -background-color: rgba(255, 255, 255, 0.151);
+    //background-color: rgba(255, 255, 255, 0.151);
     backdrop-filter: blur(5px);
     -opacity: 0.5;
 }
@@ -2018,14 +2067,14 @@ li.L9 {
     text-align: center;
     -width: 250px;
     -height: 200px;
-    -background-color: rgba(242, 255, 0, 0.288);
+    //background-color: rgba(242, 255, 0, 0.288);
 }
 
 .wallPostsPicContainer img {
     margin-top: 85px;
     height: auto;
     width: 40vw;
-    -margin-left: 15px;
+    //margin-left: 15px;
     -object-fit: scale-down;
     -object-fit: contain;
     border-radius: 5px;
@@ -2063,8 +2112,67 @@ li.L9 {
 
 /* ----section(Notification)---- */
 
-#pushNotificationBell {
-    font-size: 2em;
+/* .Toaster__alert {
+    //background-color: white;
+    backdrop-filter: blur(5px);
+    overflow: hidden;
+    max-width: 650px;
+    //max-width: 50vw;
+    position: absolute;
+    z-index: 100000000000000;
+    border-radius: 0.4rem;
+    display: flex;
+    padding: 1rem;
+    padding-right: 48px;
+    box-shadow: rgba(52, 58, 64, 0.15) 0px 1px 10px 0px,
+        rgba(52, 58, 64, 0.1) 0px 6px 12px 0px,
+        rgba(52, 58, 64, 0.12) 0px 6px 15px -2px;
+}
+
+.Toaster__alert_text {
+    box-sizing: border-box;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+        "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
+        "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    color: rgb(33, 37, 41);
+    -webkit-font-smoothing: antialiased;
+    font-weight: 500;
+    line-height: 1.5;
+    font-size: 1rem;
+    margin: 0px;
+}
+
+.Toaster__alert_close {
+    padding: 12px;
+    outline: none;
+    cursor: pointer;
+    background-color: transparent;
+    position: absolute;
+    top: 7px;
+    right: 4px;
+    border-radius: 0.4rem;
+    border: 0;
+    -webkit-appearance: none;
+    font-size: 1rem;
+    font-weight: 700;
+    line-height: 1;
+    text-shadow: 0 1px 0 #fff;
+    opacity: 0;
+}
+
+.Toaster__alert_close:focus {
+    box-shadow: rgba(52, 58, 64, 0.15) 0px 0px 0px 3px;
+}
+
+.Toaster__message-wrapper {
+    padding: 8px;
+    //position: fixed;
+    //z-index: 10;
+}
+
+.pushNotificationFriendRequestBell {
+    font-size: 2.3em;
+    color: white;
     //animation:swing 2.6s ease 0s;
     -moz-animation: swing 0.5s infinite linear;
     -o-animation: swing 0.5s infinite linear;
@@ -2091,10 +2199,52 @@ li.L9 {
     }
 }
 
-#pushNotificationText {
+.pushNotificationFriendRequestText {
     font-size: 1em;
     padding-top: 5px;
     font-family: Dejavu Sans, monospace;
+    color: white;
+}
+
+#revoked {
+    color: red;
+} */
+
+#test {
+    color: red;
+    font-size: 3em;
+    //position: absolute;
+    border: 3px solid black;
+    //background-color: lime;
+    backdrop-filter: blur(5px);
+    padding: 50px;
+    //top: -300px;
+    top: 10px;
+    //margin-left: 25vw;
+    z-index: 1;
+    width: 650px;
+
+    //transition: top 2s ease-in-out;
+    animation: trans 3.5s ease-in-out;
+    animation-duration: 0.9s;
+}
+
+@keyframes trans {
+    0% {
+        top: -300px;
+    }
+    /* 25% {
+        transform: rotateZ(25deg);
+    }
+    50% {
+        transform: rotateZ(-15deg);
+    }
+    75% {
+        transform: rotateZ(10deg);
+    } */
+    100% {
+        top: 10px;
+    }
 }
 
 /* ----section(Uploader)---- */
@@ -2135,8 +2285,8 @@ li.L9 {
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    -background-color: rgba(0, 0, 0, 0.61);
-    -ackdrop-filter: blur(1px);
+    //background-color: rgba(0, 0, 0, 0.61);
+    //backdrop-filter: blur(1px);
     border-radius: 5px;
 }
 
@@ -2208,7 +2358,7 @@ li.L9 {
     -height: 100px;
     display: flex;
     justify-content: center;
-    -flex-direction: column;
+    //flex-direction: column;
     border-radius: 5px;
     -border: 2px solid red;
     backdrop-filter: blur(10px);
@@ -2242,7 +2392,7 @@ li.L9 {
     cursor: pointer;
     margin-right: 50px;
     margin-left: 50px;
-    -padding-bottom: 3px;
+    //padding-bottom: 3px;
     font-size: 1.1em;
     padding: 5px 13px;
 }
@@ -2357,7 +2507,7 @@ footer {
 .glitchFooter {
     font-size: 1em;
 
-    -background-color: black;
+    //background-color: black;
 }
 
 .glitchFooter:before {
@@ -2417,7 +2567,7 @@ footer {
 .glitchFooterApp {
     font-size: 1em;
     padding-bottom: 15px;
-    -background-color: black;
+    //background-color: black;
 }
 
 .glitchFooterApp:before {
