[direct_messages]fixed some bugs & added error handling with push notifications

--- a/client/style.scss
+++ b/client/style.scss
@@ -2128,7 +2128,7 @@ li.L9 {
 /* ----section(Notification)---- */
 
 .Toaster__alert {
-    border: 1px solid lime;
+    //border: 1px solid lime;
     width: 100%;
 }
 /* .Toaster__alert {
@@ -2228,7 +2228,7 @@ li.L9 {
 }
 
 #revoked {
-    color: red;
+    color: rgb(203, 0, 0);
 }
 
 #test {
