--- a/client/style.scss
+++ b/client/style.scss
@@ -864,6 +864,22 @@ button {
     }
 }
 
+#notificationIcon {
+    color: black;
+    background-color: rgba(255, 255, 255, 0);
+    padding: 0 20px;
+    -border-radius: 50%;
+    font-size: 1.3em;
+
+    &:hover {
+        color: rgb(0, 212, 0);
+    }
+
+    &:focus {
+        color: rgb(0, 212, 0);
+    }
+}
+
 /* #menuLine {
     -background: red;
     -width: 10px;
@@ -888,7 +904,6 @@ button {
     border-radius: 25px;
     font-size: 1.33em;
     //top: 35px;
-    
 
     &:hover {
         color: rgba(0, 0, 0, 0.445);
@@ -1110,7 +1125,8 @@ button {
     //min-height: 300px;
     -min-width: 100%;
     //max-height: 80%;
-    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+    //box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+    box-shadow: 15px 15px 55px rgba(0, 0, 0, 0.826);
 }
 
 .profile_picBigContainer {
@@ -1350,6 +1366,12 @@ button {
     text-align: center;
 }
 
+.imgNameAlign {
+    //border: 3px solid red;
+    width: 100%;
+    text-align: center;
+}
+
 .friendsWrapper {
     padding-bottom: 5%;
     /*  display: flex;
@@ -1477,9 +1499,16 @@ button {
     margin-left: 5px;
 }
 
-#imgLatest {
+#wallHistoryElements {
     padding: 5px;
     margin-left: 5px;
+    transform: translate(0, -90px);
+    transition: 1s;
+}
+
+#imgLatest p {
+    text-decoration: underline;
+    text-decoration-color: black;
 }
 
 .searchInputWrapper {
@@ -1549,7 +1578,8 @@ button {
     //min-width: 700px;
     /* margin-left: 20%;
     margin-right: 20%; */
-    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+    //box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+    box-shadow: 25px 15px 55px rgba(0, 0, 0, 0.826);
 }
 
 .chatHistoryContainer {
@@ -1819,10 +1849,15 @@ li.L9 {
     -border: 1px solid whitesmoke;
     box-shadow: 0 14px 28px rgba(255, 255, 255, 0.226),
         0 10px 10px rgba(245, 245, 245, 0.226);
-}
 
-#chatbuttonWrap button:hover {
-    color: lime;
+    &:hover {
+        color: lime;
+    }
+
+    &:focus {
+        outline: none;
+        border: 1px solid lime;
+    }
 }
 
 /* ----section(OnlineUsers)---- */
@@ -1897,11 +1932,16 @@ li.L9 {
     //animation: border-pulsate 2.45s infinite;
 }
 
-/* ----section(DirectMessages)---- */
+/* ----section(PM/DirectMessages)---- */
 
 #directMessages {
     text-align: center;
     font-family: Dejavu Sans, monospace;
+}
+
+.visible {
+    visibility: visible;
+    z-index: 1;
 }
 
 /* ----section(Wall)---- */
@@ -1964,7 +2004,7 @@ li.L9 {
 
 .cardWall {
     position: relative;
-    -background-color: #000000d5;
+    //background-color: #000000d5;
     color: whitesmoke;
     margin: 20px;
     border-radius: 5px;
@@ -1973,8 +2013,21 @@ li.L9 {
     -moz-animation-direction: 0 14px 28px rgba(0, 0, 0, 0.25),
         0 10px 10px rgba(0, 0, 0, 0.22);
     -box-shadow: 0 0 20px white, 0 0 5px white;
-    box-shadow: 5px 25px 55px rgba(0, 0, 0, 0.826);
+    box-shadow: 45px 45px 55px rgba(0, 0, 0, 0.826);
     -border: 10px solid yellow;
+
+    &:hover {
+        .wallPostsGlassOverlayWrap {
+            transition: 1.5s;
+            visibility: visible;
+            z-index: 1;
+        }
+
+        #wallHistoryElements {
+            transition: 1s;
+            transform: translate(0, 0);
+        }
+    }
 }
 
 .wallHistoryContainerHidden {
@@ -1990,15 +2043,18 @@ li.L9 {
     -height: auto;
     height: 90vh;
     width: 70vw;
+    //max-width: 80vw;
+    //min-width: 700px;
     -width: 750px;
     overflow-x: hidden;
-    background-color: rgb(29, 29, 29);
+    background-color: rgb(10, 10, 10);
     -z-index: 1;
     -position: absolute;
     -border: 4px solid white;
     -border: 4px solid lime;
     margin-bottom: 5%;
-    //margin-top: 1%;
+    //padding-top: 20px;
+    top: 0;
     border-radius: 5px;
 }
 
@@ -2027,6 +2083,8 @@ li.L9 {
     position: absolute;
     width: 100%;
     border-radius: 5px;
+    visibility: hidden;
+    transition: 0.5s;
 }
 
 .wallPostsGlassOverlay {
@@ -2052,6 +2110,10 @@ li.L9 {
 
 .wallPostsGlassOverlay > div > p {
     font-size: 1.3em;
+}
+
+#wallTitle {
+    background: transparent;
 }
 
 #wallForm {
@@ -2093,9 +2155,9 @@ li.L9 {
 
 .wallPostsPicContainer img {
     margin-top: 85px;
-    height: auto;
-    width: 40vw;
-    //margin-left: 15px;
+    //max-height: 90vh;
+    width: 101.1%;
+    margin-left: -0.8%;
     -object-fit: scale-down;
     -object-fit: contain;
     border-radius: 5px;
@@ -2132,6 +2194,10 @@ li.L9 {
 }
 
 /* ----section(Notification)---- */
+
+.Toaster__ {
+    background: red;
+}
 
 .Toaster__alert {
     //border: 1px solid lime;
@@ -2195,8 +2261,6 @@ li.L9 {
     //z-index: 10;
 } */
 
-
-
 .pushNotificationFriendRequestBell {
     font-size: 2.3em;
     color: rgb(0, 0, 0);
@@ -2206,6 +2270,21 @@ li.L9 {
     -webkit-animation: swing 0.5s infinite linear;
     animation: swing 0.5s infinite linear;
     animation-iteration-count: 10;
+}
+
+#pushNotificationFriendRequestBell {
+    font-size: 3.6em;
+    color: rgb(0, 0, 0);
+    //animation:swing 2.6s ease 0s;
+    -moz-animation: swing 0.5s infinite linear;
+    -o-animation: swing 0.5s infinite linear;
+    -webkit-animation: swing 0.5s infinite linear;
+    animation: swing 0.5s infinite linear;
+    animation-iteration-count: 10;
+}
+
+#bellSize {
+    font-size: 8em;
 }
 
 @keyframes swing {
@@ -2272,6 +2351,30 @@ li.L9 {
     100% {
         top: 10px;
     }
+}
+
+#textAreaHidden {
+    visibility: hidden;
+    //display:none
+}
+
+#noNotificationsTextWrap {
+    //border: 3px solid lime;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    //width: 100%;
+}
+
+#noNotificationsTextWrap p {
+    justify-content: center;
+     padding: 20px;
+}
+
+#notificationsFlex {
+    display: flex;
+    align-items: center;
+    //border: 3px solid lime;
 }
 
 /* ----section(Uploader)---- */
@@ -2655,7 +2758,8 @@ html.darkMode {
     }
 
     .ParticlesApp {
-        margin-top: 226px;
+        //margin-top: 226px;
+        margin-top: 180px;
         transition: margin-top 2s ease-in-out;
     }
 
@@ -2726,7 +2830,8 @@ html.darkMode {
     }
 
     .cardWall {
-        box-shadow: 0 0 20px white, 0 0 5px white;
+        box-shadow: 0 0 35px rgba(255, 255, 255, 0.781), 0 0 5px white;
+        //box-shadow: 45px 45px 55px rgba(255, 255, 255, 0.596);
     }
 
     .opsNoFriendsNorRequestsSecondtWrap {
